src/components/OurBlends/OurBlends.css
html {
  height: 100vh;
}
body {
  padding: 0;
  margin: 0;
  font-family: "flama book"
  /* background: linear-gradient(#fff, #fefefe, #eaeaea); */
}

@font-face {
    font-family: "flama book";
    src: url("/public/Fonts/flama book_1596466159.otf") format("opentype");
    font-weight: normal;
    font-style: normal;
  }


@font-face {
  font-family: "flama medium";
  src: url("/public/Fonts/flama medium_1596466164.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}
/* THE CONTAINER FOR THE BLENDS HEADER TEXT */
.rectangularSection {
  background-color: #ffffff;
  height: 100%;
  /* width: 100%; */
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  align-items: flex-start;
  padding-left: 100px;
}
/* "OUR BLENDS" HEADER TEXT */
.accordionHeader {
  background-color: white;
  font-family: "flama medium";
  color: #000;
  font-size: 40px;
  font-style: normal;
  font-weight: 650;
  line-height: normal;
  letter-spacing: 8px;
  /* padding-left: 100px; */
  margin-top: 60px;
  margin-bottom:60px;
  right: 100px;
}

/* THE IMAGES WITHIN THE ACCORDION */
.accordionContainer {
  /* max-width: 990px; */
  /* background: rgba(0, 0, 0, 0.1); */
  /* width: 385px; */
  width: 1440px;
  height: 708px;
  /* margin: 20px auto; */
  display: flex;
  /* box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.47); */
  flex-direction: row;
  /* cursor: pointer; */
  /* margin-bottom: 100px; */
  /* padding-left: 15px; */
}


.panel {
  position: relative;
  /* height: 100%; */
  height: 716px;

  flex: 1;
  background-position: left;
  background-size: cover;
  transition: 0.7s;
  /* box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.47); */
  border-left:2px solid;
  border-left-color: #A2A8AA;
  writing-mode:vertical-lr;
  text-orientation:mixed;
  text-combine-upright: none;
  transform: rotate(0.5turn);
  padding-bottom: 5px;
  /* bottom:20px; */

}

.panel:hover {
  flex: 7;
  height: 400px;
}
.a1 {
  background-image: url("./BlendIconography/Apex.svg");
}
.a2 {
  background-image: url("./BlendIconography/Canopy.svg");
}
.a3 {
  background-image: url("./BlendIconography/Coastal.svg");
  color: #fff;
}
.a4 {
  background-image: url("./BlendIconography/Howler.svg");
  color: #fff;
}
.a5 {
  background-image: url("./BlendIconography/Restful.svg");
}

/* THE P TEXT THAT HOLDS THE INDIVIDUAL NAMES OF THE BLENDS */
.blendName {
  font-weight: normal;
  font-family: "flama medium";
  text-transform: uppercase;
  color: #000;
  font-size: 18px;
  font-style: normal;
  font-weight: 650;
  line-height: normal;
  letter-spacing: 3.6px;
  /* writing-mode:vertical-rl; */
  /* writing-mode:vertical-lr;
  text-orientation:mixed;
  text-combine-upright: none;
  transform: rotate(0.5turn);
  bottom:10px; */
} 
/* 
.text {
  position: absolute;
  bottom: 0;
  opacity: 0;
  padding: 10px;
} */
/* .box:hover .text {
  opacity: 1;
} */

@media screen and (max-width: 800px) {
  body {
    margin: 0;
  }
  .accordion {
    flex-direction: column;
    height: 700px;
    box-shadow: none;
  }
  .box {
    box-shadow: none;
  }
  .box:hover {
    flex: 7;
  }
}

